--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.4",
     "@types/js-cookie": "^3.0.5",
+    "gh-pages": "^6.0.0",
     "svelte": "^3.58.0",
     "vite": "^4.3.9"
   },
